@@ -59,8 +59,8 @@ public class ChatConfiguration {
         // Initialize protocol-aware services from new discovery method
         List<McpDiscoveryService.McpServiceConfiguration> serviceConfigs = mcpDiscoveryService.getMcpServicesWithProtocol();
         this.mcpServerServices.addAll(serviceConfigs.stream()
-                .map(config -> new McpServerService(config.serviceName(), config.serverUrl(), config.protocol(), config.headers(), mcpClientFactory))
-                .toList());
+                .map(config -> new McpServerService(config.serviceName(), config.serverUrl(), config.protocol(), config.headerSupplier(), mcpClientFactory))
+                .collect(Collectors.toList()));
 
         logger.info("ChatConfiguration initialized with {} MCP server services", mcpServerServices.size());
         mcpServerServices.forEach(service ->
